--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ a:visited {
 .form {
   background-color: var(--btn-bg);
   border-radius: 5px;
-  padding: 1.5rem 2.75rem;
+  padding: 1.5rem 1rem;
   margin-bottom: 1.75rem;
 
   display: grid;
@@ -258,11 +258,12 @@ a:visited {
   padding: 5px 20px;
 }
 .reset {
-  padding: 5px 30px;
-  width: fit-content;
+  width: 100%;
+  padding: 0.3rem 1.1rem;
 }
 
 .buttons {
   display: flex;
   justify-content: space-between;
+  gap: 10px;
 }
